--- a/instruments.hbs
+++ b/instruments.hbs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-{{>fakeNavBar}}
+{{> fakeNavBar }}
 <!--Real Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
     <a class="navbar-brand" href="http://localhost:8080/">
@@ -62,7 +62,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter email" required>
+                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter Username" required>
                     </div>
                     <div class="form-group">
                         <label for="loginpassword">Password</label>
@@ -78,7 +78,7 @@
                     <button type="button" class="btn btn-light" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="button" value="Submit" onclick="form_submit1()" data-dismiss="modal" class="btn btn-pink">Login</button>
+                    <button onclick="form_submit1()" value="Submit" class="btn btn-pink">Login</button>
                 </div>
             </form>
         </div>
@@ -98,25 +98,35 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="registeruser">Username</label>
-                        <input name="username" type="text" class="form-control" id="registeruser" placeholder="Enter email" required>
+                        <input name="username" type="text" minlength="6" class="form-control" id="registeruser" placeholder="Enter Username" required>
                     </div>
                     <div class="form-group">
                         <label for="registerpassword">Password</label>
-                        <div class="input-group" id="passwordeye">
-                            <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
+                        <div class="input-group">
+                            <input name="password" type="password" minlength="7" class="form-control" id="registerpassword" placeholder="Enter password" required
+                                   onKeyUp="CheckIntensity(this.value)">
                             <div class="input-group-append">
                                 <span class="input-group-text">
-                                  <i class="fa fa-eye" id="eye" role="button" onclick="reveal()"></i>
+                                  <i class="fa fa-eye-slash" id="eye" role="button" onclick="reveal()"></i>
                                 </span>
                             </div>
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <table border="0" cellpadding="0" cellspacing="0" style="transform:translateY(8px);">
+                            <tr align="center">
+                                <td id="pwd_Weak" class="pwd pwd_c"> </td>
+                                <td id="pwd_Medium" class="pwd pwd_c pwd_f">NULL</td>
+                                <td id="pwd_Strong" class="pwd pwd_c pwd_c_r"> </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button onclick="form_submit()" value="Submit" data-dismiss="modal" class="btn btn-pink">Register</button>
+                    <button onclick="form_submit()" value="Submit" class="btn btn-pink">Register</button>
                 </div>
             </form>
         </div>
@@ -159,14 +169,50 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script type="text/javascript">
-    function form_submit() {
-        document.getElementById("register").submit();
-    }
-</script>
-<script type="text/javascript">
-    function form_submit1() {
-        document.getElementById("login_form").submit();
+<script>
+    function CheckIntensity(pwd) {
+        var Mcolor, Wcolor, Scolor, Color_Html;
+        var m = 0;
+        if (pwd.length == 0) {
+            m = 0;
+        } else if (pwd.length <= 3) {
+            m = 1;
+        } else if (pwd.length <= 6) {
+            m = 2;
+        } else {
+            m = 3;
+        }
+
+        switch (m) {
+            case 1:
+                Wcolor = "pwd pwd_Weak_c";
+                Mcolor = "pwd pwd_c";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "Weak";
+                break;
+            case 2:
+                Wcolor = "pwd pwd_Medium_c";
+                Mcolor = "pwd pwd_Medium_c";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "Medium";
+                break;
+            case 3:
+                Wcolor = "pwd pwd_Strong_c";
+                Mcolor = "pwd pwd_Strong_c";
+                Scolor = "pwd pwd_Strong_c pwd_Strong_c_r";
+                Color_Html = "Strong";
+                break;
+            default:
+                Wcolor = "pwd pwd_c";
+                Mcolor = "pwd pwd_c pwd_f";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "NULL";
+                break;
+        }
+        document.getElementById('pwd_Weak').className = Wcolor;
+        document.getElementById('pwd_Medium').className = Mcolor;
+        document.getElementById('pwd_Strong').className = Scolor;
+        document.getElementById('pwd_Medium').innerHTML = Color_Html;
     }
 </script>
 </body>
