--- a/aboutus.hbs
+++ b/aboutus.hbs
@@ -17,122 +17,9 @@
 </head>
 
 <body>
-<!--Real Nav Bar-->
-<nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-    <a class="navbar-brand" href="http://localhost:8080/">
-        <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse mt-3" id="navbar">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-                <div class="dropdown-menu dropmenu">
-                    <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
-                    <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
-                    <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            {{> cartIcon }}
-            {{{ loginlogoutButton }}}
-            <li class="nav-item" id="registerbutton">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<div class="modal fade" id="login">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Login</h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    &times;
-                </button>
-            </div>
-            <form method="post" action="/login" id="login_form">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter Username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="loginpassword">Password</label>
-                        <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="vcode">Code</label>
-                        <input name="vcode" type="text" class="form-control" id="vcode" placeholder="Enter Verification Code" required>
-                    </div>
-                    {{{imgTag}}}
-                    <p>Click To Change!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-dismiss="modal">
-                        Cancel
-                    </button>
-                    <button onclick="form_submit1()" value="Submit" class="btn btn-pink">Login</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="signup">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Sign Up</h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    &times;
-                </button>
-            </div>
-            <form method="post" action="/register" id="register">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="registeruser">Username</label>
-                        <input name="username" type="text" minlength="6" class="form-control" id="registeruser" placeholder="Enter Username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerpassword">Password</label>
-                        <div class="input-group">
-                            <input name="password" type="password" minlength="7" class="form-control" id="registerpassword" placeholder="Enter password" required
-                                   onKeyUp="CheckIntensity(this.value)">
-                            <div class="input-group-append">
-                                <span class="input-group-text">
-                                  <i class="fa fa-eye-slash" id="eye" role="button" onclick="reveal()"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <table border="0" cellpadding="0" cellspacing="0" style="transform:translateY(8px);">
-                            <tr align="center">
-                                <td id="pwd_Weak" class="pwd pwd_c"> </td>
-                                <td id="pwd_Medium" class="pwd pwd_c pwd_f">NULL</td>
-                                <td id="pwd_Strong" class="pwd pwd_c pwd_c_r"> </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-dismiss="modal">
-                        Cancel
-                    </button>
-                    <button onclick="form_submit()" value="Submit" class="btn btn-pink">Register</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+{{> fakeNavBar }}
+{{> realNavBar }}
+{{> signInUpModals }}
 
 <div class="container">
     <br>
