--- a/partials/realNavBar.hbs
+++ b/partials/realNavBar.hbs
@@ -7,16 +7,17 @@
   </button>
   <div class="collapse navbar-collapse mt-3" id="navbar">
     <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-        <div class="dropdown-menu dropmenu">
-          <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
-          <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
-          <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/electronics">Electronics</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
+        <a class="nav-link" href="http://localhost:8080/groceries">Groceries</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/instruments">Musical Instruments</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deal</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
